--- a/cs_340_nodes/hw/angular_customer/js/partials/customer.html
+++ b/cs_340_nodes/hw/angular_customer/js/partials/customer.html
@@ -4,6 +4,10 @@
 	<input type="text" ng-model="new_customer.name" placeholder="Enter New Customer Name">
 	<input type="hidden" ng-model="new_customer.id"></input>
 	<button ng-click="addCustomer()">Add a New Customer</button>
+	<!-- Error Message -->
+	<p ng-messages='er in err'>
+		{{ er }}
+	</p>
 	<!-- Search Bar -->
 	<input type="text" placeholder="Search Names" ng-model="filter_name"> {{ filter_name }}
 	<!-- Customer Table -->
@@ -14,8 +18,8 @@
 		<td>Action</td>
 	</tr></th>
 	<tr ng-repeat="customer in customers | filter: filter_name | orderBy: 'created_at' ">
-		<td>{{ customer.name }}</td>
-		<td>{{ customer.created_at }}</td>
+		<td><span ng-bind="customer.name"></td>
+		<td><span ng-bind="customer.created_at"></td>
 		<td><button ng-click="removeCustomer()">Remove</button></td>
 	</tr>
 	</table>
